--- a/ui/website/src/trial/effects/effects.css
+++ b/ui/website/src/trial/effects/effects.css
@@ -1,4 +1,4 @@
-
+/*
 .socialblock{
     height: 140px;
     padding-bottom: 20px;
@@ -65,7 +65,7 @@
 #carousel1 figure:nth-child(5) { transform: rotateY(288deg) translateZ(300px);}
 */
 
-.next, .prev {
+/*.next, .prev {
   color: #444;
   position: absolute;
   top: 100px;
@@ -83,4 +83,4 @@
   box-shadow: 0 1px 0 #999;
 }
 .next { right: 5em; }
-.prev { left: 5em; }
+.prev { left: 5em; }*/
