--- a/ui/website/src/App.css
+++ b/ui/website/src/App.css
@@ -92,75 +92,6 @@
 
 
 
-.footer-two{
- font-size: 16px;
- color: #fff;
- /*background-color: #367588;*/
- /*border-top: 1px solid #eee;*/
- height: 250px;
- padding-top: 75px;
-}
-.footer-two a{
-color: #fff;
-
-}
-.footer-end a{
-color: #fff;
-
-}
-.footer-end{
-    height: 65px!important;
-
-}
-.footer-two ul{
-    list-style: none;
-    text-decoration: none;
-
-}
-.footer-two ul li a{
-    line-height: 25px;
-    text-decoration: none;
-    text-align: left;
-
-}
-.footer-two ul li a:hover{
-    color: #42E8E0;
-
-}
-.footer-two p a{
-    line-height: 25px;
-    text-decoration: none;
-    text-align: left;
-    font-style: normal;
-
-}
-.footer-two p a:hover{
-    color: #42E8E0;
-}
-.bb-solid-1{
-    /*border-bottom: 1px solid #eee;*/
-}
-
-.font-montserrat{
-    /*font-family: 'Montserrat', sans-serif;*/
-    font-size: 18px;
-    font-weight: bold;
-}
-ul.no-icon-list {
-    margin: 0;
-    padding: 0;
-}
-.social.social-two a {
-    width: 30px;
-    height: 30px;
-    padding: 5px 8px;
-    text-align: center;
-    border: 1px solid #ddd;
-    float: left;
-    display: block;
-    margin-right: 5px;
-    border-radius: 2px;
-}
 
 .pt75 {
     padding-top: 75px;
@@ -337,73 +268,6 @@ ul.no-icon-list {
 /*color:#a85ad4;*/
 }
 
-.footer-two ul{
-    list-style: none;
-    text-decoration: none;
-
-}
-.footer-two ul li a{
-    line-height: 25px;
-    text-decoration: none;
-    text-align: left;
-
-}
-.socialicon li a{
-    line-height: 25px;
-    text-decoration: none;
-    text-align: left;
-    float: left;
-    margin-left: 5px;
-
-}
-.socialicon li a .fa{
-    border: 2px solid #fff;
-    border-radius: 50%;
-    padding: 5px 6px;
-    background-color: #fff;
-    color: #00317F;
-    font-size: 15px;
-}
-.facebook{
-    padding: 5px 7px !important;
-}
-.footer-two ul li a:hover{
-    /*color: #000;*/
-
-}
-.footer-two p a{
-    line-height: 25px;
-    text-decoration: none;
-    text-align: left;
-    /*font-family: 'Open Sans', sans-serif !important;*/
-    font-style: normal;
-
-}
-.footer-two p a:hover{
-    /*color: #000;*/
-}
-.bb-solid-1{
-    /*border-bottom: 1px solid #eee;*/
-}
-
-.font-montserrat{
-    /*font-family: 'Montserrat', sans-serif;*/
-}
-ul.no-icon-list {
-    margin: 0;
-    padding: 0;
-}
-.social.social-two a {
-    width: 30px;
-    height: 30px;
-    padding: 5px 8px;
-    text-align: center;
-    border: 1px solid #ddd;
-    float: left;
-    display: block;
-    margin-right: 5px;
-    border-radius: 2px;
-}
 
 
 
@@ -615,6 +479,11 @@ ul.no-icon-list {
     
     line-height: 25px;
 }
+.price-footer{
+    /*position: absolute;*/
+    /*cursor: pointer !important;*/
+
+}
 .pricebtn1,.pricebtn2,.pricebtn3,.pricebtn4{
     /*background-color: #367588;*/
     border-radius: 4px;
@@ -627,6 +496,9 @@ ul.no-icon-list {
     /*font-family: 'Montserrat', sans-serif;*/
     text-transform: uppercase;
     letter-spacing: 1px;
+    cursor: pointer;
+    z-index: 1000;
+    color: #fff;
 
 }
 .pricebtn2{
@@ -724,24 +596,6 @@ ul.no-icon-list {
 
 .textcolorwhite{
     color: #fff;
-}
-
-.footeranimation img{
-    position: relative;
-    top: 54px;
-    z-index: 1;
-}
-.footeranimationtruck img{
-    position: relative;
-    top: 156px;
-    left: 1000px;
-    z-index: 1;
-}
-.footeranimationtruck2 img{
-    position: relative;
-    top: 125px;
-    left: 500px;
-    z-index: 1;
 }
 
 
