--- a/ui/website/src/allBlocks/Upstream/Upstream.css
+++ b/ui/website/src/allBlocks/Upstream/Upstream.css
@@ -1,53 +1,161 @@
 
-.carocontainer{
-  margin: 0% auto;
-  width: 210px;
-  height: 380px;
+
+.fill-purple
+{
+  background-image: linear-gradient(90deg, #4addff, #a34dfe);
+}
+
+.fill-green
+{
+  background-image: linear-gradient(90deg, #ffe40c, #33d497);
+}
+
+.fill-blue
+{
+  background-image: linear-gradient(90deg, #285ca5, #18d5ff);
+}
+
+.fill-orange
+{
+  background-image: linear-gradient(90deg, #fcf595, #ff954d);
+}
+
+.cards
+{
+  display:flex;
+  flex-direction:row;
+  align-items:center;
+  justify-content:center;
   position: relative;
-  perspective: 100000px;
+  
 }
-#carousel{
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  transform-style: preserve-3d;
-  animation: rotation 20s infinite linear;
-}
-#carousel:hover{
-  animation-play-state: paused;
-}
-#carousel figure{
-  display: block;
-  position: absolute;
-  width: 350px;
-  height: 116px;
-  left: 10px;
-  top: 10px;
-  /*background: black;*/
-  /*overflow: hidden;*/
-  /*border: solid 5px black;*/
-}
-#carousel figure:nth-child(1) {transform: rotateY(0deg) translateZ(300px);}
-#carousel figure:nth-child(2) { transform: rotateY(72deg) translateZ(300px);}
-#carousel figure:nth-child(3) { transform: rotateY(144deg) translateZ(300px);}
-#carousel figure:nth-child(4) { transform: rotateY(216deg) translateZ(300px);}
-#carousel figure:nth-child(5) { transform: rotateY(288deg) translateZ(300px);}
-/*#carousel figure:nth-child(6) { transform: rotateY(200deg) translateZ(288px);}
-#carousel figure:nth-child(7) { transform: rotateY(240deg) translateZ(288px);}
-#carousel figure:nth-child(8) { transform: rotateY(280deg) translateZ(288px);}
-#carousel figure:nth-child(9) { transform: rotateY(320deg) translateZ(288px);}
-*/
 
+.card
+{
+  display:flex;
+  width:380px;
+  height:355px;
+  border-radius:0.5rem;
+  transform-origin:center center;
+  transform:scale(1) translate(0px,0px) perspective( 750px ) rotateY(0deg);
+  transition-timing-function: cubic-bezier(0.42, 0, 0.58, 1);
+  transition-duration: 0.5s;
+  position:absolute;
+  top:0;
+  box-shadow:0 30px 50px rgba(0,0,0,0.1);
+  /*z-index:3;*/
+  /*cursor: pointer;*/
+  /*overflow:hidden;*/
+  background-color: #eee;
+  top:25px;
+}
 
-@keyframes rotation{
-  from{
-    transform: rotateY(0deg);
+.card *
+{
+  pointer-events: none;
+}
+
+.card--left
+{
+  transform:scale(0.75) translate(-377px,0px) perspective( 750px ) rotateY(25deg);
+  box-shadow:0 15px 25px rgba(0,0,0,0.1);
+  z-index:2;
+}
+.card--left-left
+{
+  transform:scale(0.75) translate(-670px,0px) perspective( 750px ) rotateY(25deg);
+  box-shadow:0 15px 25px rgba(0,0,0,0.1);
+  z-index:1;
+}
+
+.card--center
+{
+  transform:scale(1) translate(0px, 0px) perspective( 750px ) rotateY(0deg);
+  box-shadow:0 30px 50px rgba(0,0,0,0.1);
+  z-index:3;
+}
+
+.card--right
+{
+  transform:scale(0.75) translate(377px,0px) perspective( 750px ) rotateY(-25deg);
+  box-shadow:0 15px 25px rgba(0,0,0,0.1);
+  z-index:2;
+}
+.card--right-right
+{
+  transform:scale(0.75) translate(670px,0px) perspective( 750px ) rotateY(-25deg);
+  box-shadow:0 15px 25px rgba(0,0,0,0.1);
+  z-index:1;
+}
+
+.card__icon
+{
+  width:30%;
+  height:100%;
+  background:rgba(255,255,255,0.5);
+  position:relative;
+  display:flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+}
+
+.card__icon:before
+{
+  content:attr(data-icon);
+  font-size:3rem;
+  position:absolute;
+  display:flex;
+  align-items: center;
+  justify-content: center;
+  width:100px;
+  height:100px;
+  border-radius: 50px;
+  background:rgba(255,255,255,1);
+}
+
+.card__detail
+{
+  flex:1;
+  display:flex;
+  align-items: center;
+  justify-content: center;
+}
+
+@media only screen and (max-width : 736px)
+{
+  .cards
+  {
+    flex-direction:column;
+    margin:auto 0;
   }
-  to{
-    transform: rotateY(360deg);
+
+  .card
+  {
+    display:flex;
+    width:90%;
+  }
+
+  .card--left
+  {
+    transform:scale(0.75) translate(0px, -150px) perspective(750px) rotateY(0) rotateX(-10deg) translateZ(-5px);
+  }
+
+  .card--center
+  {
+    transform:scale(1) translate(0px, 0px) perspective( 750px ) rotateY(0deg)  rotateX(0deg) translateZ(5px);
+  }
+
+  .card--right
+  {
+    transform:scale(0.75) translate(0px, 150px) perspective(750px) rotateY(0) rotateX(10deg) translateZ(-5px);
+  }
+
+  .card__icon:before
+  {
+    transform:scale(0.75);
   }
 }
-
 .upstreamcontentheader h1{
   font-size: 40px;
 }
@@ -60,6 +168,11 @@
 }
 
 
+
+.upstreamfoot{
+  pointer-events: auto!important;
+  cursor: pointer;
+}
 
 
 
