--- a/ui/website/src/allPages/ServicesPage/ServicesPage.css
+++ b/ui/website/src/allPages/ServicesPage/ServicesPage.css
@@ -3,7 +3,7 @@
 	padding-right: 0px;
 }
 body{
-  overflow-x: hidden;
+  /*overflow-x: hidden;*/
 }
 div, a, p, h1, h2, h3, h4, h5, h6, i, span, label{
 	font-family: 'Raleway', sans-serif;
