--- a/ui/website/src/common/Header/Header.css
+++ b/ui/website/src/common/Header/Header.css
@@ -16,6 +16,7 @@
 .navbar-default .navbar-nav > li > a{
   color:#40E0D0;
   font-weight: 600;
+  padding: 10px 13px
 }
 .navbar-default .navbar-nav > li > a {
   padding-bottom: 17px;
