--- a/ui/website/src/common/Header/Header.css
+++ b/ui/website/src/common/Header/Header.css
@@ -1,16 +1,10 @@
 
-h1 {
-  margin-top: 100px;
-  text-align: center;
-  font-size: 60px;
-  line-height: 70px;
-  /*font-family: 'roboto', sans-serif;*/
-}
+
 #container {
   margin: 0 auto;
   max-width: 890px;
 }
-p { text-align: center; }
+/*p { text-align: center; }*/
  .toggle, [id^=drop] {
  display: none;
 }
