--- a/ui/website/src/common/Header/Header.css
+++ b/ui/website/src/common/Header/Header.css
@@ -9,7 +9,7 @@
  display: none;
 }
 nav {
-  margin: 0;
+  margin-top: 30px;
   padding: 0;
   /*background-color: #254441;*/
 }
@@ -40,16 +40,18 @@ nav ul li {
   margin: 0px;
   display: inline-block;
   float: left;
-  background-color: #aaa;
+  background-color: #fff;
 }
 
 nav a {
   display: block;
-  padding: 0 20px;
-  color: #FFF;
-  font-size: 20px;
+  padding: 0 13px;
+  color: #000;
+  font-size: 15px;
   line-height: 60px;
   text-decoration: none;
+  text-transform: uppercase;
+  font-weight: bold;
 }
 
 nav ul li ul li:hover { background: #aaa; }
@@ -160,4 +162,9 @@ nav ul li {
   width: 94%;
 }
 
+}
+
+.headerlogo img{
+  margin-top: 20px;
+  height: 80px;
 }
