--- a/ui/website/src/allBlocks/Upstream/Upstream.css
+++ b/ui/website/src/allBlocks/Upstream/Upstream.css
@@ -9,7 +9,7 @@
   align-items:center;
   justify-content:center;
   position: relative;
-  margin-top: 70px;
+  margin-top: 40px;
   
 }
 
@@ -158,10 +158,15 @@
 }
 
 .upstreamblock{
-  height: 800px;
-  padding: 100px 100px;
-  margin-bottom:100px;
+  height: 710px;
+  padding: 60px 100px;
+  margin-bottom:60px;
 
 
+}
+
+.owl-theme .owl-nav{
+  /*background-color: red;*/
+  /*margin-top: -300px!important;*/
 }
 
