--- a/ui/website/src/allPages/AboutUs/AboutUs.css
+++ b/ui/website/src/allPages/AboutUs/AboutUs.css
@@ -83,7 +83,7 @@
     box-shadow: 0 10px 29px rgba(92,141,255,.22);
     margin-bottom: 50px;
     padding: 32px 40px 56px;
-    background-color: #003bb3;
+    background-color: #009de2;
     color:white;
     background-image:url("/images/11.png") no-repeat;
     height: 200px;
