--- a/ui/website/src/allBlocks/Blogs/Blogs.css
+++ b/ui/website/src/allBlocks/Blogs/Blogs.css
@@ -54,6 +54,26 @@
 }
 
 .blogleftarrow{
-  background-color: red;
+  background-color: #009de2;
+    border: 10px solid #009de2;
+    color: #fff;
+    border-radius: 50%;
+    padding: 5px 13px;
+    font-size: 25px;
+    left: -80px;
+    top: 280px;
+    position: absolute;
+
+}
+.blogrightarrow{
+  background-color: #009de2;
+    border: 10px solid #009de2;
+    color: #fff;
+    border-radius: 50%;
+    padding: 5px 13px;
+    font-size: 25px;
+    right: -80px;
+    top: 280px;
+    position: absolute;
 
 }
