--- a/ui/website/src/allPages/ServicesPage/ServicesPage.css
+++ b/ui/website/src/allPages/ServicesPage/ServicesPage.css
@@ -8,3 +8,16 @@ body{
 div, a, p, h1, h2, h3, h4, h5, h6, i, span, label{
 	font-family: 'Raleway', sans-serif;
 }
+
+.servicebg1{
+	background-image: url("/images/serviceback1.png");
+	background-size: 100% 100%;
+	background-repeat: no-repeat;
+	/*width: 100%;*/
+}
+.servicebg2{
+	background-image: url("/images/serviceback2.png");
+	background-size: 100% 70%;
+	background-repeat: no-repeat;
+	/*width: 100%;*/
+}
