--- a/ui/website/src/allPages/AboutUs/AboutUs.css
+++ b/ui/website/src/allPages/AboutUs/AboutUs.css
@@ -257,8 +257,9 @@ margin-top: 54px;
 }
 
 .line_para2{
-    line-height: 23px;
+    line-height: 25px;
     letter-spacing: 1px;
+    font-size: 19px;
 }
 .line_para3{
     line-height: 23px;
