--- a/ui/website/src/allBlocks/Assetservicesblock/Assetservicesblock.css
+++ b/ui/website/src/allBlocks/Assetservicesblock/Assetservicesblock.css
@@ -35,10 +35,10 @@
 	margin-bottom:120px;
 }
 .contentheader h1{
-	font-size: 41px;
+	font-size: 50px!important;
     line-height: 20px;
     font-weight: 700;
-    letter-spacing: -.4px;
+    letter-spacing:1px!important;
 }
 .contentheader h2{
   font-size: 42px;
