--- a/ui/website/src/allPages/AboutUs/AboutUs.css
+++ b/ui/website/src/allPages/AboutUs/AboutUs.css
@@ -245,8 +245,8 @@ margin-top: 54px;
   .line_para{
     line-height: 25px;
     letter-spacing: 1px;
-    /* margin-top: -3px; */
-    font-size: 19px;
+     margin-top: 20px; 
+    font-size: 20px;
 }
 .line_para1{
     line-height: 23px;
