--- a/ui/website/src/allPages/Downstreamservicespage/Downstreamservicespage.css
+++ b/ui/website/src/allPages/Downstreamservicespage/Downstreamservicespage.css
@@ -1,10 +1,18 @@
-.NOpadding{
-	padding-left: 0px;
-	padding-right: 0px;
+.downstreambg1{
+	background-image:url("/images/downstreambg1.png");
+	background-size: 100% 100%;
+	background-repeat: no-repeat;
+	height: 500px;
 }
-body{
-  /*overflow-x: hidden;*/
+.downstreambg2{
+	background-image:url("/images/downstreambg3.png");
+	background-size: 100% 100%;
+	background-repeat: no-repeat;
+	height: 500px;
 }
-div, a, p, h1, h2, h3, h4, h5, h6, i, span, label{
-	font-family: 'Raleway', sans-serif;
+.downstreambg3{
+	background-image:url("/images/downstreambg2.png");
+	background-size: 100% 100%;
+	background-repeat: no-repeat;
+	height: 500px;
 }
